# Heroes_4_1

./: .env_example  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
heroes/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
heroes/migrations/: 0001_initial.py  0002_branch_team_remove_herostatus_cell_and_more.py  0003_remove_herostatus_type_team_type_alter_team_mentor.py  0004_hero_phone.py
heroes/templates/heroes/: base.html  branch_detail.html  branch_form.html  branch_list.html  cell_detail.html  cell_list.html  hero_detail.html  hero_list.html  herostatus_detail.html  herostatus_list.html  home.html  inc_confirm_delete.html  inc_footer.html  inc_main_menu.html  inc_menu.html  parent_detail.html  parent_list.html  parentstatus_detail.html  parentstatus_list.html  payment_detail.html  payment_list.html  paymenttype_detail.html  paymenttype_list.html  team_detail.html  team_list.html  training_confirm_delete.html  training_detail.html  training_list.html
telegram_schedule/: apps.py  services.py  services_connector.py  services_db.py  services_handler.py
telegram_schedule/management/commands/: run_tg.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_tg_id.py  0003_user_phone.py  0004_alter_user_options.py
users/templates/users/: login.html  password_reset.html  user_confirm_delete.html  user_form.html  user_list.html
